--- a/.github/workflows/key_vault.yaml
+++ b/.github/workflows/key_vault.yaml
@@ -19,6 +19,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Azure Login
+        run: az login --service-principal -u $ARM_CLIENT_ID -p $ARM_CLIENT_SECRET --tenant $ARM_TENANT_ID
+
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v1
         # with:
