--- a/.github/workflows/key_vault.yaml
+++ b/.github/workflows/key_vault.yaml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Azure Login
-        run: az login --service-principal -u $ARM_CLIENT_ID -p "${{ secrets.ARM_CLIENT_SECRET }}" --tenant $ARM_TENANT_ID
+        run: az login --service-principal -u "${{ secrets.ARM_CLIENT_ID }}" -p "${{ secrets.ARM_CLIENT_SECRET }}" --tenant $ARM_TENANT_ID
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v1
