--- a/.github/workflows/key_vault.yaml
+++ b/.github/workflows/key_vault.yaml
@@ -9,11 +9,11 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
-    env:
-      ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-      ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}  
+    # env:
+      # ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+      # ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+      # ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+      # ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}  
 
     steps:
       - name: Checkout code
