--- a/.github/workflows/key_vault.yaml
+++ b/.github/workflows/key_vault.yaml
@@ -9,19 +9,19 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
-    # env:
-      # ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-      # ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-      # ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-      # ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}  
+    env:
+      ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+      ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}  
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Azure Login
-        # run: az login --service-principal -u "${{ secrets.ARM_CLIENT_ID }}" -p "${{ secrets.ARM_CLIENT_SECRET }}" --tenant $ARM_TENANT_ID
-        run: az login --service-principal -u "uyi" -p "1RRiverniger." --tenant 835b166a-b4fe-49ec-a1a0-45fa0e155d7b         #$ARM_TENANT_ID
+      # - name: Azure Login
+      #   # # run: az login --service-principal -u "${{ secrets.ARM_CLIENT_ID }}" -p "${{ secrets.ARM_CLIENT_SECRET }}" --tenant $ARM_TENANT_ID
+        # run: az login --service-principal -u "uyi" -p "1RRiverniger." --tenant 835b166a-b4fe-49ec-a1a0-45fa0e155d7b         #$ARM_TENANT_ID
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v1
