--- a/.github/workflows/key_vault.yaml
+++ b/.github/workflows/key_vault.yaml
@@ -19,14 +19,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # - name: Azure Login
-      #   # # run: az login --service-principal -u "${{ secrets.ARM_CLIENT_ID }}" -p "${{ secrets.ARM_CLIENT_SECRET }}" --tenant $ARM_TENANT_ID
-        # run: az login --service-principal -u "uyi" -p "1RRiverniger." --tenant 835b166a-b4fe-49ec-a1a0-45fa0e155d7b         #$ARM_TENANT_ID
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v1
-        # with:
-        #   terraform_version: 1.0.0
 
       - name: Terraform Init
         run: terraform init
