--- a/.github/workflows/key_vault.yaml
+++ b/.github/workflows/key_vault.yaml
@@ -22,7 +22,7 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          creds: ${{ secrets.ARM_Client_ID }} ${{ secrets.ARM_tenant_ID }}
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v1
