--- a/.github/workflows/key_vault.yaml
+++ b/.github/workflows/key_vault.yaml
@@ -21,8 +21,13 @@ jobs:
 
       - name: Login to Azure
         uses: azure/login@v1
-        # with:
-        #   creds: ${{ secrets.ARM_Client_ID }} ${{ secrets.ARM_tenant_ID }}
+        with:
+            creds: |
+              {
+              "clientId": "${{ secrets.ARM_CLIENT_ID }}",
+              "clientSecret": "${{ secrets.ARM_CLIENT_SECRET }}",
+              "tenantId": "${{ secrets.ARM_TENANT_ID }}"
+               }
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v1
