--- a/.github/workflows/key_vault.yaml
+++ b/.github/workflows/key_vault.yaml
@@ -8,6 +8,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    
 
     env:
       ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
@@ -25,11 +26,11 @@ jobs:
             creds: |
               {
 
-              "clientId": "${{ secrets.ARM_CLIENT_ID }}",
-              "clientSecret": "${{ secrets.ARM_CLIENT_SECRET }}",
-              "tenantId": "${{ secrets.ARM_TENANT_ID }}",
-              "subscriptionId": "${{ secrets.ARM_SUBSCRIPTION_ID}}"
-              
+              "ARM_CLIENT_ID": "${{ secrets.ARM_CLIENT_ID }}",
+              "ARM_CLIENT_SECRET": "${{ secrets.ARM_CLIENT_SECRET }}",
+              "ARM_TENANT_ID": "${{ secrets.ARM_TENANT_ID }}",
+              "ARM_SUBSCRIPTION_ID": "${{ secrets.ARM_SUBSCRIPTION_ID}}"
+
               }
 
       - name: Set up Terraform
