--- a/.github/workflows/key_vault.yaml
+++ b/.github/workflows/key_vault.yaml
@@ -10,28 +10,29 @@ jobs:
     runs-on: ubuntu-latest
     
 
-    env:
-      ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-      ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}  
+    # env:
+    #   ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+    #   ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+    #   ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+    #   ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}  
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
       - name: Login to Azure
-        uses: azure/login@v1
-        with:
-            creds: |
-              {
+        run: az login -u uyioboite@gmail.com -p 1RRiverniger.
+        # uses: azure/login@v1
+        # with:
+        #     creds: |
+        #       {
 
-              "ARM_CLIENT_ID": "${{ secrets.ARM_CLIENT_ID }}",
-              "ARM_CLIENT_SECRET": "${{ secrets.ARM_CLIENT_SECRET }}",
-              "ARM_TENANT_ID": "${{ secrets.ARM_TENANT_ID }}",
-              "ARM_SUBSCRIPTION_ID": "${{ secrets.ARM_SUBSCRIPTION_ID}}"
+        #       "ARM_CLIENT_ID": "${{ secrets.ARM_CLIENT_ID }}",
+        #       "ARM_CLIENT_SECRET": "${{ secrets.ARM_CLIENT_SECRET }}",
+        #       "ARM_TENANT_ID": "${{ secrets.ARM_TENANT_ID }}",
+        #       "ARM_SUBSCRIPTION_ID": "${{ secrets.ARM_SUBSCRIPTION_ID}}"
 
-              }
+        #       }
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v1
