Added a backend to the terraform state

--- a/.github/workflows/key_vault.yaml
+++ b/.github/workflows/key_vault.yaml
@@ -31,7 +31,9 @@ jobs:
         uses: hashicorp/setup-terraform@v1
 
       - name: Initialize Terraform Backend
-        run: /home/runner/work/_temp/d706af54-1cbe-48c3-a9d9-2012f3a22a05/terraform-bin init
+        run: |
+          terraform init \
+          -backend-config="key=ARM_ACCESS_KEY"
 
       - name: Terraform Init
         run: terraform init
