Added a backend to the terraform state

--- a/.github/workflows/key_vault.yaml
+++ b/.github/workflows/key_vault.yaml
@@ -30,10 +30,10 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v1
 
-      - name: Initialize Terraform Backend
-        run: |
-          terraform init \
-          -backend-config="key=ARM_ACCESS_KEY"
+      # - name: Initialize Terraform Backend
+      #   run: |
+      #     terraform init \
+      #     -backend-config="key=ARM_ACCESS_KEY"
 
       - name: Terraform Init
         run: terraform init
