Added a backend to the terraform state

--- a/.github/workflows/key_vault.yaml
+++ b/.github/workflows/key_vault.yaml
@@ -33,7 +33,7 @@ jobs:
       # - name: Initialize Terraform Backend
       #   run: |
       #     terraform init \
-      #     -backend-config="key=ARM_ACCESS_KEY"
+      #     -backend-config="key=ARM_ACCESS_KEY".
 
       - name: Terraform Init
         run: terraform init
